@@ -160,7 +160,7 @@ static int p_arg(register const struct argnod *arg)
 	struct fornod *fp;
 	while(arg)
 	{
-		if((n = strlen(arg->argval)) || (arg->argflag&~(ARG_APPEND|ARG_MESSAGE|ARG_QUOTED)))
+		if((n = strlen(arg->argval)) || (arg->argflag&~(ARG_APPEND|ARG_MESSAGE|ARG_QUOTED|ARG_ARRAY)))
 			fp=0;
 		else
 		{
